# climate-learn

./: .gitignore  .readthedocs.yaml  CCAI_Tutorial_MINT.ipynb  CITATION.cff  CONTRIBUTING.md  Climate Uncertainty.ipynb  LICENSE  README.md  TestCategorical.ipynb  Untitled.ipynb  docs-env.yml  download_copernicus_era5.sh  download_era5.sh  environment.yml  gen_era5.ipynb  launch.sh  launch_multisource.sh  launch_theta.sh  pyproject.toml  regrid.py  regrid_climatebench.py  requirements.txt  setup.cfg  setup.py  test.ipynb  test_cmip6.ipynb  test_iterdata.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  docs_issue.md  feature_request.md
.github/workflows/: binder-badge.yaml  ci.yaml
.ipynb_checkpoints/: CCAI_Tutorial_MINT-checkpoint.ipynb
binder/: environment.yml
climate_learn/configs/: train_unet.yaml
climate_learn/data/: __init__.py  constants.py  download.py  module.py
climate_learn/models/: __init__.py
climate_learn/training/: train.py
climate_learn/utils/: data.py  visualize.py
climate_tutorial/: __init__.py
climate_tutorial/configs/: train_resnet.yaml
climate_tutorial/data/: __init__.py  constants.py  datamodule.py  download.py  module.py  regrid.py
climate_tutorial/models/: __init__.py
climate_tutorial/src/: __init__.py  download.py  train_linear.py  train_vit.py
climate_tutorial/training/: __init__.py  loggers.py  train.py
climate_tutorial/utils/: data.py  datetime.py  utils.py  visualize.py
configs/: train_linear.yaml  train_resnet.yaml  train_unet.yaml  train_vit.yaml  visualization_mae.yaml  visualization_video_mae.yaml
docs/notebooks/: Data_Processing.ipynb  Model_Training_&_Evaluation.ipynb  NeurIPS2022_CCAI_Tutorial.ipynb  Visualization.ipynb  iterdatamodule.ipynb
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/temporal_robustness/: continuous_model.py  direct_model.py  iterative_model.py
experiments/: plot_table2.py  resnet-test.py  table1-vit.py  table1b-resnet.py  table2-resnet.py  table2-unet.py
experiments/climate_projection/: climatebench-unet.py  climatebench.py
experiments/downscaling/: era5_era5_baselines.py  era5_era5_deep_learning.py  era5_prism_baselines.py  era5_prism_deep_learning.py
experiments/forecasting/: cmip6_cmip6_baselines.py  cmip6_cmip6_deep_learning.py  era5_era5_baselines.py  era5_era5_deep_learning.py
extreme/: era5_eda.ipynb  era5_gen_mask.ipynb
notebooks/: 1-Data_Processing.ipynb  1a-Data_Processing.ipynb  1b-Data_Processing.ipynb  2-Model_Training_Evaluation.ipynb  2a-Model_Training_Evaluation.ipynb  2b-Model_Training_Evaluation.ipynb  3-Visualization.ipynb  3a-Visualization.ipynb  3b-Visualization.ipynb  MC_Dropout.ipynb  Quickstart.ipynb  Table1.ipynb  Table6.ipynb  era5-regrid.ipynb  example.ipynb  example.py  iterdatamodule.ipynb  prism-process.ipynb  prism.ipynb  rank_histogram.ipynb  visualizations.ipynb
requirements/: docs.txt  main.txt
results_json/: forecast_acc.json  forecast_rmse.json
scripts/: climatebench-resnet.py  climatebench-unet.py  climatebench-vit.py  plot_table1.py  plot_table2.py  resnet-ensemble.py  resnet-prob.py  resnet-test.py  resume.py  run.py  run_cmip6_continuous.py  run_cmip6_multisource_continuous.py  run_era5.py  run_mask2former_cmip6.py  run_mask2former_cmip6_continuous.py  run_mask2former_era5.py  run_resnet.py  run_resnet_cmip6.py  run_resnet_era5.py  run_resnet_pretrained.py  run_sw_pretrained.py  run_sw_segmentation_cmip6.py  run_swinv2_cmip6_continuous.py  run_timesformer_pretrained_cmip6.py  run_vit.py  run_vit_pretrained.py  run_vit_pretrained_cmip6.py  table1-afno.py  table1-baselines.py  table1-climax.py  table1-era5resnet.py  table1-era5unet.py  table1-era5vit.py  table1-resnet.py  table1-unet.py  table1-vit.py  table1.py  table1b-resnet.py  table2-resnet-iter.py  table2-resnet.py  (+11 more)
scripts/configs/: cmip.yaml  config.yaml  config_climax_emb.yaml  config_cmip6.yaml  config_cmip6_climax_emb.yaml  config_cmip6_level_emb.yaml  config_cmip6_mask2former.yaml  config_cmip6_mask2former_continuous.yaml  config_cmip6_mask2former_single_stage.yaml  config_cmip6_mask2former_stage1.yaml  config_cmip6_mask2former_stage1_fixed.yaml  config_cmip6_mask2former_stage2.yaml  config_cmip6_mask2former_stage2_fixed.yaml  config_cmip6_multisource_mask2former_stage1.yaml  config_cmip6_multisource_mask2former_stage2.yaml  config_cmip6_resnet.yaml  config_cmip6_swinv2_stage1.yaml  config_cmip6_swinv2_stage2.yaml  config_cmip6_timesformer.yaml  config_cmip6_vit_pretrained_stage1.yaml  config_cmip6_vit_pretrained_stage2.yaml  config_era5_mask2former.yaml  config_era5_mask2former_single_stage.yaml  config_era5_mask2former_stage1.yaml  config_era5_mask2former_stage2.yaml  config_era5_resnet.yaml  config_era5_swinv2.yaml  config_era5_swinv2_pred_all_1_step.yaml  config_era5_vit_pretrained.yaml  config_sw_segmentation_base_cmip6.yaml  highres.yaml  lowres.yaml  mask2former.yaml  mask2former_cmip.yaml  resnet.yaml  resnet_cmip.yaml  resnet_pretrained.yaml  vit.yaml  vit_cmip.yaml
scripts/output/: config.yaml
scripts/test/: table1-cmip6resnet.py  table1-cmip6unet.py  table1-cmip6vit.py  table1-era5resnet.py  table1-era5unet.py  table1-era5vit.py
src/: download.sh  download_era5.py  download_weatherbench.py  nc2np_equally.py  train_cnn.py  train_unet.py  train_vit.py  visualize_forecast.py  visualize_vit.py
src/climate_learn/: __init__.py  load_forecasting_module.py  loader_utils.py  loaders.py  trainer.py
src/datamodules/: __init__.py  era5_datamodule.py  era5_dataset.py  era5_iterdataset.py  era5_iterdataset_module.py  multi_source_iterdataset_module.py
src/models/: cnn_module.py  forecast_module.py  unet_module.py  vit_module.py
src/utils/: metrics.py
tests/: instantiate_cdsclient_test.py  instantiate_models_test.py  test_trainer.py  unit_test.py  unit_tests.py
tests/data/: era5_dataset_test.py  era5_downscaling_dataset_test.py  era5_forecasting_dataset_test.py  test_download.py  test_module.py
tests/data_module/: era5_dataset_test.py  era5_downscaling_dataset_test.py  era5_forecasting_dataset_test.py  test_module.py
(+279 files in other folders)
