[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "climate_learn"
version = "1.0.0"
description = "ClimateLearn: Benchmarking Machine Learning for Weather and Climate Modeling"
readme = "README.md"
authors = [
    "MINT at UCLA <jason.jewik@ucla.edu>",
    "Tung Nguyen <tungnd@cs.ucla.edu>",
    "Jason Jewik <jason.jewik@ucla.edu>",
    "Hritik Bansal <hbansal@ucla.edu>",
    "Prakhar Sharma <prakhar6sharma@gmail.com>",
    "Aditya Grover <adityag@cs.ucla.edu>",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
cdsapi = ">=0.5.1"
dask = ">=2022.2.0"
importlib-metadata = "==4.13.0"
matplotlib = ">=3.5.3"
netcdf4 = ">=1.6.2"
pytorch-lightning = ">=1.9.0"
scikit-learn = ">=1.0.2"
timm = "==0.9.2"
tensorboard = "==2.11.2"
wandb = ">=0.13.9"
xarray = ">=0.20.2"
rasterio = ">=1.3.7"

[tool.poetry.dev-dependencies]
black = ">=23.1.0"
flake8 = ">=3.9.2"
pytest = ">=7.2.1"
properscoring = "*"
build = "*"
twine = "*"

[tool.poetry.extras]
docs = ["ipython", "nbsphinx", "sphinx", "sphinx_rtd_theme"]